--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "node",
     "pallets/template",
     "pallets/institution",
+    "pallets/institution-freight-template",
     "runtime",
 ]
 resolver = "2"
@@ -18,6 +19,7 @@ resolver = "2"
 solochain-template-runtime = { path = "./runtime", default-features = false }
 pallet-template = { path = "./pallets/template", default-features = false }
 pallet-institution = { path = "./pallets/institution", default-features = false }
+pallet-institution-freight-template = { path = "./pallets/institution-freight-template", default-features = false }
 clap = { version = "4.5.13" }
 frame-benchmarking-cli = { version = "47.0.0", default-features = false }
 frame-metadata-hash-extension = { version = "0.8.0", default-features = false }
