--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -24,11 +24,14 @@ frame-system.workspace = true
 frame-try-runtime = { optional = true, workspace = true }
 pallet-aura.workspace = true
 pallet-balances.workspace = true
+pallet-c2c-token = { path = "../pallets/c2c-token", default-features = false }
+pallet-c2c-order = { path = "../pallets/c2c-order", default-features = false }
 pallet-grandpa.workspace = true
 pallet-institution = { path = "../pallets/institution", default-features = false }
 pallet-institution-freight-template = { path = "../pallets/institution-freight-template", default-features = false }
 pallet-institution-payment-method = { path = "../pallets/institution-payment-method", default-features = false }
 pallet-order = { path = "../pallets/order", default-features = false }
+pallet-product = { path = "../pallets/product", default-features = false }
 pallet-sudo.workspace = true
 pallet-template.workspace = true
 pallet-timestamp.workspace = true
@@ -68,11 +71,14 @@ std = [
 	"frame-try-runtime?/std",
 	"pallet-aura/std",
 	"pallet-balances/std",
+	"pallet-c2c-token/std",
+	"pallet-c2c-order/std",
 	"pallet-grandpa/std",
 	"pallet-institution/std",
 	"pallet-institution-freight-template/std",
 	"pallet-institution-payment-method/std",
 	"pallet-order/std",
+	"pallet-product/std",
 	"pallet-sudo/std",
 	"pallet-template/std",
 	"pallet-timestamp/std",
@@ -103,11 +109,14 @@ runtime-benchmarks = [
 	"frame-system-benchmarking/runtime-benchmarks",
 	"frame-system/runtime-benchmarks",
 	"pallet-balances/runtime-benchmarks",
+	"pallet-c2c-token/runtime-benchmarks",
+	"pallet-c2c-order/runtime-benchmarks",
 	"pallet-grandpa/runtime-benchmarks",
 	"pallet-institution/runtime-benchmarks",
 	"pallet-institution-freight-template/runtime-benchmarks",
 	"pallet-institution-payment-method/runtime-benchmarks",
 	"pallet-order/runtime-benchmarks",
+	"pallet-product/runtime-benchmarks",
 	"pallet-sudo/runtime-benchmarks",
 	"pallet-template/runtime-benchmarks",
 	"pallet-timestamp/runtime-benchmarks",
@@ -122,11 +131,14 @@ try-runtime = [
 	"frame-try-runtime/try-runtime",
 	"pallet-aura/try-runtime",
 	"pallet-balances/try-runtime",
+	"pallet-c2c-token/try-runtime",
+	"pallet-c2c-order/try-runtime",
 	"pallet-grandpa/try-runtime",
 	"pallet-institution/try-runtime",
 	"pallet-institution-freight-template/try-runtime",
 	"pallet-institution-payment-method/try-runtime",
 	"pallet-order/try-runtime",
+	"pallet-product/try-runtime",
 	"pallet-sudo/try-runtime",
 	"pallet-template/try-runtime",
 	"pallet-timestamp/try-runtime",
